# time-tracker

./: README.md  dashboard.html  index.html  package-lock.json  package.json  vite.config.js
dev-docs/: design-blueprint.md  execution-plan.md
docs/: dev-execution-plan.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  db.rs  lib.rs  main.rs  models.rs  timer.rs
src-tauri/src/commands/: app_cmd.rs  config_cmd.rs  dashboard_cmd.rs  mod.rs  timer_cmd.rs
src/js/: api.js  dashboard.js  fan-menu.js  main.js
src/styles/: ball.css  dashboard.css  fan-menu.css
